# cot-distillation-fidelity-audit

./: .env.example  .gitignore  DATASETS.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
mindset/: Idealization(1).md  RESEARCH_REPORT_CoT_RELIABILITY.md  Remind(1).md  THESIS_PROPOSAL_V3.md
mindset/Gemini/: advanced_metrics_exploration.md  execution_reminders.md  first_principles_perspectives.md  insight_ef.md  insight_mc.md  (+3 more)
outputs/: COMPLETENESS.md  CONCLUSIONS.md  HYPOTHESES_VS_RESULTS.md  REPORT_distill_fidelity.md  SYNTHESIS.md  aesthetics_metrics.jsonl  claude46_ti_judged.jsonl  claude46_ti_summary.json  claude47_ti_judged.jsonl  cross_dataset_report.json  gemini_judged.jsonl  h4_ds9b_traces.jsonl  h4_glm9b_traces.jsonl  nohurry_opus_judged.jsonl  opus_all.jsonl  pairing_progress.json  pairing_summary.json  pilot_judged.jsonl  pilot_summary.json  report_aesthetics.json  report_calibration.json  report_cross_dataset.json  report_length.json  report_paired.json  report_panel.json  report_structural.json  report_verify.json  round4_convergence.md  structural_metrics.jsonl
plan/: ideas-cot-distill-next.md
scripts/: aggregate_opus.py  analyze_pairs.py  build_uid_index.py  calibrate.py  check_pairing.py  cross_dataset_report.py  diag_budget.py  fusion_smoke.py  gen_model_traces.py  gen_qwopus_traces.py  h4_prep_and_struct.py  kimi_judge_batches.py  kimi_vs_opus.py  panel_analysis.py  prep_batches.py  run_aesthetics.py  run_all.py  run_c1_gpu0.sh  run_c1_gpu1.sh  run_c1_traces.sh  run_dataset.py  run_panel.py  run_pilot.py  run_structural.py  smoke_judge.py
(+17 files in other folders)
